--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Agreement.AboutUs">
+    tools:context=".agreement.AboutUs">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,6 +15,7 @@
             android:id="@+id/textView9"
             android:layout_width="104dp"
             android:layout_height="64dp"
+            android:layout_gravity="center"
             android:layout_marginTop="62dp"
             android:text="@string/aboutUs"
             android:textSize="20sp"
@@ -22,8 +23,7 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="MissingConstraints"
-            android:layout_gravity="center"/>
+            tools:ignore="MissingConstraints" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline2"
@@ -36,10 +36,10 @@
             android:id="@+id/textView10"
             android:layout_width="251dp"
             android:layout_height="347dp"
+            android:layout_gravity="center"
             android:text="@string/content"
             tools:ignore="MissingConstraints"
             tools:layout_editor_absoluteX="80dp"
-            tools:layout_editor_absoluteY="145dp"
-            android:layout_gravity="center"/>
+            tools:layout_editor_absoluteY="145dp" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
