--- a/app/src/main/res/layout/activity_main_view.xml
+++ b/app/src/main/res/layout/activity_main_view.xml
@@ -58,7 +58,7 @@
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.786"
+        app:layout_constraintHorizontal_bias="0.894"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8"
         tools:ignore="TextContrastCheck" />
@@ -67,13 +67,24 @@
         android:id="@+id/button_contact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
+        android:layout_marginStart="40dp"
         android:background="@color/purple_200"
         android:text="@string/contactUser"
         android:textColor="@color/white"
         app:layout_constraintBaseline_toBaselineOf="@+id/button4"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="TextContrastCheck" />
+
+    <Button
+        android:id="@+id/button_showMap"
+        android:layout_width="100dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="40dp"
+        android:background="@color/teal_700"
+        android:textColor="@color/white"
+        android:text="@string/showOnMap"
+        app:layout_constraintBaseline_toBaselineOf="@+id/button_contact"
+        app:layout_constraintStart_toEndOf="@+id/button_contact" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
